Sigil 0.6.0 TBA
    - Fix issue 1281: Semantics information retained for deleted files.
    - Implement issue 32: Adding custom "date" metadata.
    - Implement issue 33: Options for creators and contributors.
    - Replace Book View Editor with editor based on CKEditor.
    - Split View is now Code View with a preview pane.
    - Implement issue 1265: Option to manually set UI language.
    - Implement issue 1295: Meta Editor should support translations of descriptions/names
    - Implement issue 77: Allow multiple <language> metadata elements in a book
    - Implement issue 1180:
        - Allow Find next misspelled word
            - Adds Spell Check mode to Find&Replace
            - Supports searching for all misspelled words or just misspelled
              words matching a regex
            - Supports Count All, replace, replace all, up, down, one or more
              files
            - Allows use of standard F&R key shortcuts
        - Enable/disable highlighting in code view but still allow Find
          misspelled words
        - New misspelled search code, shared by F&R, highlighting, etc.
        - Allow user dictionary file location to be set (preferred place, one
          per book/genre, etc)
        - Allow additional dictionary directory to be set
    - Fix crash when doing a search in all HTML files when an HTML file does
      not have focus.
    - Use ini format for settings on all platforms except OS X.
      - Change organization name to Sigil Project.
      - See issue #1277 for an explanation.
    - Switch to using Minizip for 1.1 for ZIP support. 
      - Remove ZipArchive and Zipios++.
    - Update zlib to 1.2.6.
    - Remove the use of a precompiled header.
    - Update PCRE to 8.30.
      - Make PCRE 8.30 with UTF-16 support the minimum required version.
      - Bundled PCRE uses PCRE's JIT for faster searching.
      - Modify Regex search code to use UTF-16 instead of UTF-8 for all