@@ -27,8 +27,8 @@
 #include <QtGui/QDockWidget>
 
 #include "BookManipulation/Book.h"
+#include "MainUI/NCXModel.h"
 
-class NCXModel;
 class QModelIndex;
 class QPushButton;
 class QTimer;
@@ -93,6 +93,8 @@ private slots:
      */
     void GenerateTocFromHeadings();
 
+    void GenerateInlineToc();
+
 signals:
 
     /**
@@ -105,6 +107,8 @@ signals:
     void OpenResourceRequest( Resource &resource, bool precede_current_tab, const QUrl &fragment );
 
     void GenerateTocRequest();
+
+    void GenerateInlineTocRequest(NCXModel::NCXEntry);
 
 private:
 
@@ -150,6 +154,11 @@ private:
      * The button that initiates the TOC-generation-from-headings process.
      */
     QPushButton &m_GenerateTocButton;
+
+    /**
+     * The button that initiates the inline HTML TOC file generation process.
+     */
+    QPushButton &m_GenerateInlineTocButton;
 
     /**
      * The timer that provides the delay for the refresh operation.
